// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty form without data 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="email"
    >
      Email
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
    <p
      className="root"
    >
      Set a password at the end of guest checkout to create an account in one easy step.
    </p>
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="firstname"
    >
      First Name
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="firstname"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="lastname"
    >
      Last Name
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="lastname"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <Country
    classes={
      Object {
        "root": "field",
      }
    }
    validate={[Function]}
  />
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="street0"
    >
      Street Address
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="street[0]"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="street1"
    >
      Street Address 2
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="street[1]"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="city"
    >
      City
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="city"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <Region
    classes={
      Object {
        "root": "field",
      }
    }
    validate={[Function]}
  />
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="postcode"
    >
      ZIP / Postal Code
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="postcode"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="telephone"
    >
      Phone Number
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="telephone"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="buttons"
  >
    <button
      className="root_normalPriority"
      disabled={false}
      type="submit"
    >
      <span
        className="content"
      >
        Continue to Shipping Method
      </span>
    </button>
  </div>
</form>
`;

exports[`renders prefilled form with data with disabled buttons 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="email"
    >
      Email
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          value="fry@planet.express"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="firstname"
    >
      First Name
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="firstname"
          onBlur={[Function]}
          onChange={[Function]}
          value="Philip"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="lastname"
    >
      Last Name
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="lastname"
          onBlur={[Function]}
          onChange={[Function]}
          value="Fry"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <Country
    classes={
      Object {
        "root": "field",
      }
    }
    validate={[Function]}
  />
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="street0"
    >
      Street Address
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="street[0]"
          onBlur={[Function]}
          onChange={[Function]}
          value="3000 57th Street"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="street1"
    >
      Street Address 2
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="street[1]"
          onBlur={[Function]}
          onChange={[Function]}
          value="Suite 200"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="city"
    >
      City
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="city"
          onBlur={[Function]}
          onChange={[Function]}
          value="Manhattan"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <Region
    classes={
      Object {
        "root": "field",
      }
    }
    validate={[Function]}
  />
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="postcode"
    >
      ZIP / Postal Code
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="postcode"
          onBlur={[Function]}
          onChange={[Function]}
          value="10019"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="telephone"
    >
      Phone Number
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="telephone"
          onBlur={[Function]}
          onChange={[Function]}
          value="(123) 456-7890"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="buttons"
  >
    <button
      className="root_normalPriority"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Cancel
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={true}
      type="submit"
    >
      <span
        className="content"
      >
        Update
      </span>
    </button>
  </div>
</form>
`;

exports[`renders prefilled form with data with enabled buttons 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="email"
    >
      Email
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          value="fry@planet.express"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="firstname"
    >
      First Name
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="firstname"
          onBlur={[Function]}
          onChange={[Function]}
          value="Philip"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="lastname"
    >
      Last Name
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="lastname"
          onBlur={[Function]}
          onChange={[Function]}
          value="Fry"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <Country
    classes={
      Object {
        "root": "field",
      }
    }
    validate={[Function]}
  />
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="street0"
    >
      Street Address
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="street[0]"
          onBlur={[Function]}
          onChange={[Function]}
          value="3000 57th Street"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="street1"
    >
      Street Address 2
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="street[1]"
          onBlur={[Function]}
          onChange={[Function]}
          value="Suite 200"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="city"
    >
      City
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="city"
          onBlur={[Function]}
          onChange={[Function]}
          value="Manhattan"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <Region
    classes={
      Object {
        "root": "field",
      }
    }
    validate={[Function]}
  />
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="postcode"
    >
      ZIP / Postal Code
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="postcode"
          onBlur={[Function]}
          onChange={[Function]}
          value="10019"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="telephone"
    >
      Phone Number
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          name="telephone"
          onBlur={[Function]}
          onChange={[Function]}
          value="(123) 456-7890"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
  <div
    className="buttons"
  >
    <button
      className="root_normalPriority"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Cancel
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={false}
      type="submit"
    >
      <span
        className="content"
      >
        Update
      </span>
    </button>
  </div>
</form>
`;
